src/test/deca/context/invalid/assign_null_to_int.deca
/*
    Description : Assignation de null à un entier

    Résultat : OK
*/
class A{
    int x;

    int r(){
        x = null;
    }
}
